Settings, Profile Picture Upload, Setting up profile page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="reg_btn_text">Create new account</string>
     <string name="reg_pass_text">Password</string>
     <string name="reg_confirm_pass_text">Confirm Password</string>
+    <string name="setup_name_hint">Your Name</string>
+    <string name="setup_account_btn_text">Save Account Settings</string>
 </resources>
