--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="reg_confirm_pass_text">Confirm Password</string>
     <string name="setup_name_hint">Your Name</string>
     <string name="setup_account_btn_text">Save Account Settings</string>
+    <string name="post_description_here">Add Description</string>
+    <string name="new_post_button">Post</string>
 </resources>
