--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="bottom_location_text" />
     <string name="bottom_chat_text">Chat</string>
     <string name="input_text_description">Description</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
